# calor

./: .gitignore  Readme.md
.github/workflows/: deploy-pages.yml
backend/: ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  openapi.yaml  pyproject.toml
backend/app/: __init__.py  config.py  lambda_handler.py  main.py
backend/app/api/routes/: __init__.py  dimensions.py  performance.py
backend/app/db/: __init__.py  client.py  compression.py  repository.py  tables.py
backend/app/models/: __init__.py  schemas.py
backend/deployment/: _lambda_shared.py  create_dynamo_tables.py  create_lambda_infra.py  deploy_lambda.py
backend/scripts/: dump_openapi.py
backend/tests/: conftest.py
backend/tests/integration/: test_dimensions_api.py  test_performance_api.py
backend/tests/unit/: __init__.py  test_compression.py  test_schemas.py
etl/: README.md  requirements.txt
etl/conf/: etl_config.yaml
etl/job/: __init__.py  constants.py  etl.py  etl_helpers.py  models.py
etl/scripts/: load_csv_to_dynamodb.py
etl/tests/: README.md  run_all_tests.sh
etl/tests/fixtures/: expected_output.csv  input.csv
etl/tests/integration/: test_etl.py
etl/tests/spark/: conftest.py  test_heatmap_path_aggregations.py  test_line_path_aggregations.py
etl/tests/unit/: test_combine_value.py  test_heatmap.py  test_line_graph.py  test_normalise.py  test_primary_keys.py
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.tsx  api.ts  config.ts  types.ts  vite-env.d.ts
scripts/: init_local.py  serve.sh
(+6 files in other folders)
